Update 'q066a7hpi-python' component image to: quay.io/rhtap_qe/rhtap-qe:07a2bc2edef0e56390134248e00e34e1599b0794@sha256:20e52c70b9a95decb164d313e73f2509a008c200b4f464b468d07975d8f18e78

--- a/components/q066a7hpi-python/overlays/development/deployment-patch.yaml
+++ b/components/q066a7hpi-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: q066a7hpi-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:07a2bc2edef0e56390134248e00e34e1599b0794@sha256:20e52c70b9a95decb164d313e73f2509a008c200b4f464b468d07975d8f18e78
+          name: container-image
